--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="hero-info">
         <h1>Prasanth Kakaraparthi</h1>
         <p>AI/ML Enthusiast & Developer</p>
-        <a href="cv_kakaraparthi_prasanth.pdf" download class="btn">Resume</a>
+        <a href="Updated_ Ram_Prasanth (1).pdf" download class="btn">Resume</a>
       </div>
       <div class="hero-img">
         <img src="profile.jpg" alt="Prasanth's Photo">
