--- a/portfolio.html
+++ b/portfolio.html
@@ -453,7 +453,7 @@
                             <i class="fas fa-globe"></i>
                         </a>
                     </div>
-                    <button class="download-btn" onclick="downloadResume()">
+                    <button class="download-btn" onclick=<a href="Updated_ Ram_Prasanth (1).pdf" download class="btn"></a>>
                         <i class="fas fa-download"></i>
                         Download Resume
                     </button>
