--- a/portfolio.html
+++ b/portfolio.html
@@ -453,10 +453,10 @@
                             <i class="fas fa-globe"></i>
                         </a>
                     </div>
-                    <button class="download-btn" onclick=<a href="Updated_ Ram_Prasanth (1).pdf" download class="btn"></a>>
-                        <i class="fas fa-download"></i>
-                        Download Resume
-                    </button>
+                        <a href="Updated_Ram_Prasanth (1).pdf" download class="download-btn">
+                            <i class="fas fa-download"></i>
+                            Download Resume
+                        </a>
                 </div>
             </div>
         </header>
