--- a/portfolio.html
+++ b/portfolio.html
@@ -779,6 +779,20 @@
                 </div>
 
                 <div class="project-card">
+                    <div class="project-title"><i class="fas fa-user"></i> Perplexity Lite AI</div>
+                    <div class="project-description">
+                        A langGraph based AI deep research assistant integrated with Tavily for web search, analysis , Also integrating Apify scrsappers into the graph.
+                    </div>
+                </div>
+
+                 <div class="project-card">
+                    <div class="project-title"><i class="fas fa-user"></i> 3D-Model-Generation-ML-Tool-with-Shap-E</div>
+                    <div class="project-description">
+                        demonstrates a lightweight 3D model generation tool powered by OpenAI's Shap‑E and was coded for the internship application assignment at Red Panda Games.
+                    </div>
+                </div>
+                
+                <div class="project-card">
                     <div class="project-title"><i class="fas fa-robot"></i> Lawyer Assistant Chatbot</div>
                     <div class="project-description">
                         Real-time chatbot specifically designed for lawyer assistance, integrating LangChain with Ollama and RAG having over 1500 legal documents. Used tools and Bing API for news fetching making it a smart assistant for law-based issues and research.
@@ -786,9 +800,9 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-title"><i class="fas fa-image"></i> PConv Image Inpainting</div>
+                    <div class="project-title"><i class="fas fa-image"></i> SEPSIS Prediction and Data Analysis Using Machine Learning</div>
                     <div class="project-description">
-                        Implementation of NVIDIA's research paper "Image Inpainting for Irregular Holes Using Partial Convolutions" with a different masking technique. Built a web application allowing users to do image inpainting by directly drawing on images.
+                        To predict the onset of Sepsis using patient vitals and clinical data through various machine learning algorithms with different ml models like Random Forest, Decision Trees, SVM, etc..Achieved highest with RF.
                     </div>
                 </div>
 
@@ -1021,3 +1035,4 @@ startxref
     </script>
 </body>
 </html>
+
